# Sentiment-Analysis-LLM

./: .gitignore  README.md  generate.py  main.py  pyproject.toml  requirements.txt
src/: config.py  create_model.py  prepare_dataset.py  test.py  train.py
